# Retrivault

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: config.schema.json  config.yaml  config_schema.py
docs/: PIPELINE_TEST_REPORT.md  PLAN.md  PROGRESS.md
docs/samples/: 01-rag-basics.md  02-agent-architecture.md  03-embedding-guide.md  04-vector-db-comparison.md  05-obsidian-workflow.md  06-prompt-engineering.md  07-deep-learning-evolution.md  08-multi-agent-collaboration.md  09-wwii-turning-points.md  10-quantum-mechanics.md  11-ancient-history.md  12-cold-war.md  13-computer-vision.md  14-nlp-fundamentals.md  15-reinforcement-learning.md  16-biology-cells.md  17-chemistry-elements.md  18-mathematics-basics.md  19-economics-principles.md  20-psychology-cognitive.md  21-philosophy-thought.md  22-linux-commands.md  23-git-workflow.md  24-rest-api-design.md  25-sociology-basics.md
profiles/: default.yaml  ollama-offline.yaml  openai.yaml  siliconflow.yaml
scripts/: start.py
src/: config_loader.py
src/api/: dependencies.py  main.py  models.py
src/db/: connection.py  schema.py
src/embedding_providers/: __init__.py  api_embedder.py  local_bge_m3.py
src/eval/: __init__.py  metrics.py  runner.py
src/frontend/: eval.html  index.html
src/interfaces/: __init__.py
src/llm_providers/: __init__.py  openai_compatible.py
src/pipeline/: chunker.py  generator.py  index_manager.py  indexer.py  obsidian_parser.py  query_rewriter.py  reranker.py  retriever.py  scanner.py
src/vector_stores/: __init__.py  lance_store.py
tests/: conftest.py
tests/fixtures/: golden_dataset.yaml
tests/integration/: test_search_pipeline.py
(+25 files in other folders)
