[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pkm"
version = "0.1.0"
description = "Obsidian-first Personal Knowledge Management RAG System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Xiaolei Shaw"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # 向量存储 + 全文搜索（嵌入式，零外部服务依赖）
    "lancedb>=0.17.0",
    "pyarrow>=15.0.0",
    # Embedding（本地模型，零 API 费用）
    "sentence-transformers>=2.7.0,<3.0",
    "torch>=2.0.0",
    "numpy>=1.26,<2.0",
    "transformers>=4.44,<4.45",
    # API + UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # LLM（OpenAI 协议兼容，可接 DeepSeek / Ollama / 任意兼容 API）
    "openai>=1.55.0",
    # 中文分词（检索关键词匹配）
    "jieba>=0.42.1",
    # 配置
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
